@startuml
title Buyer Class Diagram

abstract class Person {
    - name: Name
    - phone: Phone
    - email: Email
    - appointment: Appointment
    - tags: Set<Tag>
    - remark: String
    + getRole(): Role
}

class Buyer {
    - role: Role = Role.BUYER
    + getRole(): Role
}

class Name {
    - fullName: String
}

class Phone {
    - value: String
}

class Email {
    - value: String
}

class Appointment {
    - date: Date
    - from: From
    - to: To
}

class Tag {
    - tagName: String
}

enum Role {
    BUYER
    SELLER
}

Person *--> "1" Name : Composition
Person *--> "1" Phone : Composition
Person *--> "1" Email : Composition
Person *--> "1" Appointment : Composition
Person *--> "*" Tag : Composition
Buyer --|> Person
Buyer --> Role : Association

@enduml
